overflow content fixed

--- a/source/scss/main/hero.scss
+++ b/source/scss/main/hero.scss
@@ -81,7 +81,7 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    align-items: start;
+    align-items: end;
   }
 
   @media (min-width: $desktop-width) {
@@ -111,6 +111,7 @@
 
   @media (min-width: $tablet-width) {
     padding: 26px 36px 45px;
+    min-height: 131px;
   }
 
   @media (min-width: $desktop-width) {
@@ -122,13 +123,18 @@
   font-weight: 700;
   font-size: 19px;
   line-height: 24px;
-  max-width: 130px;
+  max-width: 170px;
   display: inline-block;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
+    max-width: 180px;
   }
+
+  @media (min-width: $desktop-width) {
+      max-width: 186px;
+    }
 }
 
 .hero__icon {
